@startuml
entity "Usuario" {
    * idUsuario: int
    * nombreUsuario: String
    * contrasena: String
    * idRol: int // Clave foránea a la tabla Rol
}

entity "Rol" {
    * idRol: int
    * nombreRol: String
}

entity "Accion" {
    * idAccion: int
    * nombreAccion: String
}

entity "RolAccion" {
    * idRolAccion: int
    * idRol: int // Clave foránea a la tabla Rol
    * idAccion: int // Clave foránea a la tabla Accion
}

entity "Profesor" {
    * idProfesor: int
    * idUsuario: int // Clave foránea a la tabla Usuario
    * documentoIdentidad: String
    * apellidos: String
    * nombres: String
    * telefono: String
    * correo: String
}

entity "Asignatura" {
    * idAsignatura: int
    * codigo: String
    * nombre: String
    * horasTeoria: int
    * horasPractica: int
}

entity "Dictado" {
    * idDictado: int
    * idProfesor: int // Clave foránea a la tabla Profesor
    * idAsignatura: int // Clave foránea a la tabla Asignatura
}

entity "Grupo" {
    * idGrupo: int
    * idAsignatura: int // Clave foránea a la tabla Asignatura
    * nombreGrupo: String
}

entity "DisponibilidadHoraria" {
    * idDisponibilidad: int
    * dia: String
    * horaInicio: Time
    * horaFin: Time
}

entity "HorarioProfesor" {
    * idHorarioProfesor: int
    * idProfesor: int // Clave foránea a la tabla Profesor
    * idDisponibilidad: int // Clave foránea a la tabla DisponibilidadHoraria
}

entity "Horario" {
    * idHorario: int
    * idProfesor: int // Clave foránea a la tabla Profesor
    * idGrupo: int // Clave foránea a la tabla Grupo
    * idAula: int // Clave foránea a la tabla Aula
    * dia: String
    * horaInicio: Time
    * horaFin: Time
}

entity "Edificio" {
    * idEdificio: int
    * nombre: String
}

entity "Aula" {
    * idAula: int
    * codigo: int
    * descripcion: String
    * capacidad: int
    * computadores: boolean
    * idEdificio: int // Clave foránea a la tabla Edificio
}

Usuario }|--o{ Rol : "tiene"
Usuario }|--o{ Profesor : "es"
Profesor }|--o{ Dictado : "dicta"
Asignatura }|--o{ Dictado : "es dictada por"
Profesor }|--o{ Horario : "enseña"
Grupo }|--o{ Horario : "tiene"
Aula }|--o{ Horario : "ocurre en"
Edificio }|--o{ Aula : "contiene"
Asignatura }|--o{ Grupo : "tiene"
Rol }|--o{ RolAccion : "tiene"
Accion }|-- RolAccion

Profesor }|--o{ HorarioProfesor : "tiene"

HorarioProfesor }|--o{ DisponibilidadHoraria : "tiene"

@enduml
